<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/namePageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_up"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <EditText
            android:id="@+id/editNameText"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:hint="@string/sign_up_fist_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePageTextView"
            app:layout_constraintVertical_bias="0.060000002" />

        <EditText
            android:id="@+id/editSecondNameText"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:hint="@string/sign_up_second_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePageTextView"
            app:layout_constraintVertical_bias="0.16000003" />

        <EditText
            android:id="@+id/editEmailText"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:hint="@string/sign_up_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#060606"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePageTextView"
            app:layout_constraintVertical_bias="0.24000001" />

        <EditText
            android:id="@+id/editPassText"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:hint="@string/sign_up_pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePageTextView"
            app:layout_constraintVertical_bias="0.32999998" />

        <EditText
            android:id="@+id/editPassSecText"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:hint="@string/sign_up_repeat_pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePageTextView"
            app:layout_constraintVertical_bias="0.42000002" />

        <Button
            android:id="@+id/registrationButton"
            android:background="@drawable/button_style_background"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_up_button"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePageTextView"
            app:layout_constraintVertical_bias="0.58000004" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>