<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".presentation.auth.ChoosAuthRegistration">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ContainerStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/welcome_to_app"
            android:textColor="#000000"
            android:textSize="34sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="46dp"
                android:layout_height="75dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif"
                android:text="HomeFindr"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextText"
            style="@style/EditTextStyle"
            android:layout_width="278dp"
            android:layout_height="42dp"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:hint="@string/welcome_login"
            android:includeFontPadding="false"
            android:inputType="text|textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/EditTextStyle"
            android:layout_width="278dp"
            android:layout_height="42dp"
            android:background="@drawable/rounded_background"
            android:ems="10"
            android:hint="@string/welcome_pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText"
            app:layout_constraintVertical_bias="0.04000002" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.01999998">

            <TextView
                android:id="@+id/textRegistration"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:breakStrategy="balanced"
                android:clickable="true"
                android:contextClickable="false"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:onClick="onClikRegistration"
                android:text="@string/welcome_sign_up"
                android:textColor="#2196F3" />

            <TextView
                android:id="@+id/textViewForgotPass"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/welcome_forgot_pass"
                android:textColor="#2196F3" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonSingIn"
            style="@style/ButtonStyle"
            android:layout_width="191dp"
            android:layout_height="58dp"
            android:background="@drawable/button_style_background"
            android:text="@string/welcome_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.16000003" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>